# extrapolate

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO.md  extrapolate.cabal  stack-lts-11.yaml  stack.yaml
bench/: diff.hs  eq.hs  false.hs  ord.hs  true-false.hs  true.hs  versions
bench/lazy-sc/: Makefile  calculator.hs  list.hs  overflow.hs  parser.hs  revision.txt  sorting.hs  word-refinements.hs
bench/runtime/oubli/eg/: overflow8  word-refinements
bench/runtime/zero/: versions
bench/runtime/zero/bench/: eq  false  ord
bench/runtime/zero/eg/: list  list.runtime  overflow8  sorting.runtime  word-refinements
bench/smartcheck/: Makefile  div0-main.hs  list.hs  overflow-main.hs  parser-main.hs  revision.txt  sorting.hs  word-refinements.hs
eg/: RedBlackSet.hs  calculator.hs  gencalc.hs  heap.hs  int.hs  list.hs  overflow.hs  overflow8.hs  parser.hs  ratio.hs  redblack.hs  sorting.hs  word-refinements.hs
eg/xmonad/: Makefile  extrapolate.hs  revision.txt  xmonad.cabal
mk/: All.hs  Toplibs.hs  depend.mk
src/Test/: Extrapolate.hs
src/Test/Extrapolate/: Basic.hs  ConditionalGeneralization.hs  Core.hs  Derive.hs  Expr.hs  Exprs.hs  Generalizable.hs  Generalization.hs  IO.hs  New.hs  Speculation.hs  Testable.hs  TypeBinding.hs  Utils.hs
src/Test/Extrapolate/Generalizable/: Derive.hs
test/: Test.hs  derive.hs  extrapolate.hs  step-by-step.hs  utils.hs
test/model/bench/: diff.out  eq.out  ord.out
test/model/eg/: heap.out  int.out  list.out  overflow.out  overflow8.out  parser.out  ratio.out
tests/: Test.hs  test-derive.hs  test-extrapolate.hs  test-new.hs  test-step-by-step.hs  test-utils.hs
tests/model/bench/: diff  eq  false  ord  true  true-false  true-false.out
tests/model/eg/: calculator  gencalc  int  list  overflow8  parser.out  redblack  sorting  word-refinements  word-refinements.out
